Fix spacing in about cards

--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ section {
 
   /* about section */
   .grid-container {
-    @apply flex h-full w-full flex-col gap-5 rounded-lg border border-black-300 bg-black-200 p-4 sm:p-7;
+    @apply flex w-full flex-col gap-5 rounded-lg border border-black-300 bg-black-200 p-4 sm:p-7;
   }
 
   .grid-headtext {
